<resources>
    <string name="app_name">ZhuThomasFinalProject</string>
    <string name="menu_title">StatTrak</string>
    <string name="menu_btn_track_game">Track a New Game</string>
    <string name="menu_btn_view_stats">View Statistics</string>
    <string name="menu_btn_manage_teams">Manage Teams</string>
    <string name="menu_btn_credits">Credits</string>
    <string name="btn_help">"?"</string>
    <string name="btn_help_desc">question mark to indicate help</string>

    <string name="credits_title">Credits</string>
    <string name="credits">Lead Programmer: Sydney Thomas\n\nGraphical Artist: Jessica Zhu\n\nProject Manager: Sydney Thomas\n\nSystems Analyst: Sydney Thomas\n\nTechnical Writer: Jessica Zhu</string>


    <string name="setup_title">Game Setup</string>
    <string name="your_team_prompt">Your Team:</string>
    <string name="team_hint">Start typing your team name…</string>
    <string name="opp_prompt">Opponent: </string>
    <string name="opp_hint">Type in the name of your opponent…</string>
    <string name="starters_prompt">Your Starters:</string>
    <string name="player_img_desc">An image of a jersey to represent one player</string>
    <string name="cont_btn">Continue</string>
    <string name="default_num">00</string>

    <string name="stat_select_title">Stat Mode Selection</string>
    <string name="game_mode_btn">View Game Stats</string>
    <string name="team_mode_btn">View Team Stats</string>
    <string name="stat_select_prompt">Choose which viewing mode you would like to access:</string>

    <string name="instructions_title">Instructions</string>
    <string name="menu_instructions">Upon first opening the app…</string>
    <string name="ss_desc">A screenshot that visually demonstrates the written instructions</string>
    <string name="left_arrow">--</string>


    <string name="manager_title">Manage Teams</string>
    <string name="choose_new_or_existing">Choose to access the roster of an existing team OR create a new team</string>
    <string name="team_prompt">Team:</string>
    <string name="new_team_name_prompt">New Team Name:</string>
    <string name="new_team_hint">Type team name here</string>
    <string name="btn_create_new">Create New Team</string>
    <string name="or">OR</string>
    <string name="table_title_name">Name</string>
    <string name="table_title_number">Jersey #</string>
    <string name="table_title_active">Active?</string>
    <string name="table_title_position">Position</string>

    <string name="btn_save">Save Changes</string>
    <string name="add_new_player">New Player</string>
    <string name="lbl_num_players"># of Players:</string>
    <string name="num_players">12</string>
    <string name="lbl_act_players"># of Active Players:</string>
    <string name="act_players">10</string>

    <string name="timer">08:00</string>
    <string name="quarter">q1</string>
    <string name="team_pts">12</string>
    <string name="team_fouls">1</string>
    <string name="team_pts_label">Points</string>
    <string name="team_fouls_label">Team Fouls</string>
    <string name="recent_play_desc">last play</string>
    <string name="btn_ft_makes">FT Make</string>
    <string name="btn_ft_misses">FT Miss</string>
    <string name="btn_three_pt_makes">3PT Make</string>
    <string name="btn_three_pt_misses">3PT Miss</string>
    <string name="btn_two_pt_makes">2PT Make</string>
    <string name="btn_two_pt_misses">2PT Miss</string>
    <string name="btn_assists">Assist</string>
    <string name="btn_off_rebs">Off. Reb</string>
    <string name="btn_def_rebs">Def. Reb</string>
    <string name="btn_steals">Steal</string>
    <string name="btn_blocks">Block</string>
    <string name="btn_turnovers">Turnover</string>
    <string name="btn_fouls">Personal Foul</string>

    <string name="btn_undo">UNDO</string>
    <string name="btn_next">Next\nquarter</string>

    <string name="player_1">00</string>
    <string name="player_2">1</string>
    <string name="player_3">2</string>
    <string name="player_4">3</string>
    <string name="player_5">4</string>

    <string name="game_summ_title">Game Complete!</string>
    <string name="game_info">TEAM NAME vs. TEAM NAME\nDD/MM/YYYY</string>
    <string name="btn_export_stats">Export Stats</string>

    <string name="game_stats_title">Game Statistics</string>
    <string name="game_prompt">Game:</string>
    <string name="table_title_mins">MIN</string>
    <string name="table_title_pts">PTS</string>
    <string name="table_title_asts">ASTS</string>
    <string name="table_title_rebs">TREBS</string>
    <string name="table_title_def_rebs">DREB</string>
    <string name="table_title_off_rebs">OREB</string>
    <string name="table_title_fg">FG</string>
    <string name="table_title_fgatts">FGA</string>
    <string name="table_title_fgpct">FG%</string>
    <string name="table_title_twos">2P</string>
    <string name="table_title_twoatts">2PA</string>
    <string name="table_title_twopct">2P%</string>
    <string name="table_title_eFGPct">eFG%</string>
    <string name="table_title_threes">3P</string>
    <string name="table_title_threeatts">3PA</string>
    <string name="table_title_3ptpct">FG3%</string>
    <string name="table_title_fts">FT</string>
    <string name="table_title_ftas">FTA</string>
    <string name="table_title_ftpct">FT%</string>
    <string name="table_title_tos">TOV</string>
    <string name="table_title_stls">STL</string>
    <string name="table_title_blks">BLK</string>
    <string name="table_title_fouls">FOULS</string>



    <string name="season_stats_title">Season Statistics (per game)</string>
    <string name="season_prompt">Season:</string>
    <string name="temp_avgs">Min\t\tPts\t\tAsts\t\tStls\t\tTOs\t\tBlk
    \n32\t\t\t17\t\t9\t\t\t\t2\t\t\t\t3\t\t\t\t0</string>
    <string name="table_title_games">GAMES</string>
    // replace with an array later
    <string name="season_avgs_title">Overall:</string>
    <string name="view_stats">VIEW STATS</string>

</resources>
