<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tracker_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <Button
        android:id="@+id/btn_turnovers"
        android:layout_width="184dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:background="@android:color/white"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/btn_turnovers"
        android:textColor="@color/grayText"
        android:textSize="28sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_off_reb"
        app:layout_constraintStart_toEndOf="@+id/btn_off_reb" />

    <Button
        android:id="@+id/btn_three_point_make"
        android:layout_width="184dp"
        android:layout_height="80dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/white"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/btn_three_pt_makes"
        android:textColor="#5A5A5A"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_two_pt_make"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_two_pt_make"
        android:layout_width="184dp"
        android:layout_height="80dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/white"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/btn_two_pt_makes"
        android:textColor="#5A5A5A"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ft_make" />

    <Button
        android:id="@+id/btn_ft_make"
        android:layout_width="184dp"
        android:layout_height="80dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/white"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/btn_ft_makes"
        android:textColor="#5A5A5A"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_desc" />

    <Button
        android:id="@+id/btn_ft_miss"
        android:layout_width="184dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:background="@android:color/white"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/btn_ft_misses"
        android:textColor="#5A5A5A"
        android:textSize="32sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_ft_make"
        app:layout_constraintStart_toEndOf="@+id/btn_ft_make" />

    <Button
        android:id="@+id/btn_two_pt_miss"
        android:layout_width="184dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:background="@android:color/white"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/btn_two_pt_misses"
        android:textColor="#5A5A5A"
        android:textSize="32sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_two_pt_make"
        app:layout_constraintStart_toEndOf="@+id/btn_two_pt_make" />

    <Button
        android:id="@+id/btn_three_pt_miss"
        android:layout_width="184dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:background="@android:color/white"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/btn_three_pt_misses"
        android:textColor="#5A5A5A"
        android:textSize="32sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_three_point_make"
        app:layout_constraintStart_toEndOf="@+id/btn_three_point_make" />

    <Button
        android:id="@+id/btn_def_reb"
        android:layout_width="184dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:background="@android:color/white"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/btn_def_rebs"
        android:textColor="#5A5A5A"
        android:textSize="32sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_three_pt_miss"
        app:layout_constraintStart_toEndOf="@+id/btn_three_pt_miss" />

    <Button
        android:id="@+id/btn_off_reb"
        android:layout_width="184dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:background="@android:color/white"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/btn_off_rebs"
        android:textColor="#5A5A5A"
        android:textSize="32sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_two_pt_miss"
        app:layout_constraintStart_toEndOf="@+id/btn_two_pt_miss" />

    <Button
        android:id="@+id/btn_assist"
        android:layout_width="184dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:background="@android:color/white"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/btn_assists"
        android:textColor="#5A5A5A"
        android:textSize="32sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_ft_miss"
        app:layout_constraintStart_toEndOf="@+id/btn_ft_miss" />

    <Button
        android:id="@+id/btn_steal"
        android:layout_width="184dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:background="@android:color/white"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/btn_steals"
        android:textColor="@color/grayText"
        android:textSize="32sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_assist"
        app:layout_constraintStart_toEndOf="@+id/btn_assist" />

    <Button
        android:id="@+id/btn_undo"
        android:layout_width="196dp"
        android:layout_height="166dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="100dp"
        android:background="@android:color/white"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/btn_undo"
        android:textColor="@color/grayText"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toEndOf="@+id/btn_block"
        app:layout_constraintTop_toBottomOf="@+id/btn_foul"
        app:layout_constraintVertical_bias="0.003" />

    <Button
        android:id="@+id/btn_foul"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:background="@android:color/white"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/btn_fouls"
        android:textColor="@color/grayText"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/btn_steal"
        app:layout_constraintTop_toBottomOf="@+id/quarter" />

    <Button
        android:id="@+id/btn_block"
        android:layout_width="184dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:background="@android:color/white"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/btn_blocks"
        android:textColor="@color/grayText"
        android:textSize="32sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_def_reb"
        app:layout_constraintStart_toEndOf="@+id/btn_def_reb" />

    <TextView
        android:id="@+id/play_desc"
        android:layout_width="232dp"
        android:layout_height="111dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/holo_green_dark"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/recent_play_desc"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/timer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quarter"
        android:layout_width="82dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/titles"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/quarter"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toEndOf="@+id/timer" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="280dp"
        android:layout_height="140dp"
        android:layout_marginStart="408dp"
        android:layout_marginTop="32dp"
        android:background="@color/titles"
        android:fontFamily="@font/graduate"
        android:text="@string/timer"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="100sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_points"
        android:layout_width="136dp"
        android:layout_height="86dp"
        android:layout_marginStart="56dp"
        android:background="@color/titles"
        android:fontFamily="@font/graduate"
        android:text="@string/team_pts"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/quarter"
        app:layout_constraintStart_toEndOf="@+id/quarter" />

    <TextView
        android:id="@+id/team_fouls"
        android:layout_width="100dp"
        android:layout_height="86dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/titles"
        android:fontFamily="@font/graduate"
        android:text="@string/team_fouls"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/team_points"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/team_points" />

    <Button
        android:id="@+id/btn_sub"
        android:layout_width="155dp"
        android:layout_height="47dp"
        android:layout_marginEnd="54dp"
        android:background="@android:color/white"
        android:fontFamily="@font/raleway_light"
        android:text="@string/btn_sub"
        android:textColor="@color/titles"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_player5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_player5" />

    <ToggleButton
        android:id="@+id/btn_player1"
        android:layout_width="125dp"
        android:layout_height="89dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/titles"
        android:fontFamily="@font/graduate"
        android:textColor="@android:color/white"
        android:textColorLink="@color/colorAccent"
        android:textOff="@string/player_1"
        android:textOn="@string/player_1"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_player2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_three_point_make"
        app:layout_constraintVertical_bias="0.0" />

    <ToggleButton
        android:id="@+id/btn_player2"
        android:layout_width="125dp"
        android:layout_height="89dp"
        android:layout_marginStart="32dp"
        android:background="@color/titles"
        android:fontFamily="@font/graduate"
        android:textColor="@android:color/white"
        android:textColorHint="#E91E63"
        android:textOff="@string/player_2"
        android:textOn="@string/player_2"
        android:textSize="50sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_player1"
        app:layout_constraintEnd_toStartOf="@+id/btn_player3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_player1" />

    <ToggleButton
        android:id="@+id/btn_player3"
        android:layout_width="125dp"
        android:layout_height="89dp"
        android:layout_marginStart="32dp"
        android:background="@color/titles"
        android:fontFamily="@font/graduate"
        android:textColor="@android:color/white"
        android:textOff="@string/player_3"
        android:textOn="@string/player_3"
        android:textSize="50sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_player2"
        app:layout_constraintEnd_toStartOf="@+id/btn_player4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_player2" />

    <ToggleButton
        android:id="@+id/btn_player4"
        android:layout_width="125dp"
        android:layout_height="89dp"
        android:layout_marginStart="32dp"
        android:background="@color/titles"
        android:fontFamily="@font/graduate"
        android:textColor="@android:color/white"
        android:textOff="@string/player_4"
        android:textOn="@string/player_4"
        android:textSize="50sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_player3"
        app:layout_constraintEnd_toStartOf="@+id/btn_player5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_player3" />

    <ToggleButton
        android:id="@+id/btn_player5"
        android:layout_width="125dp"
        android:layout_height="89dp"
        android:layout_marginStart="32dp"
        android:background="@color/titles"
        android:fontFamily="@font/graduate"
        android:textColor="@android:color/white"
        android:textOff="@string/player_5"
        android:textOn="@string/player_5"
        android:textSize="50sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_player4"
        app:layout_constraintEnd_toStartOf="@+id/btn_sub"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_player4" />

    <ImageButton
        android:id="@+id/btn_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/btn_help_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <TextView
        android:id="@+id/lbl_team_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="872dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/team_pts_label"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/team_points"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/lbl_team_fouls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/team_fouls_label"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lbl_team_points"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toEndOf="@+id/lbl_team_points" />

</androidx.constraintlayout.widget.ConstraintLayout>
