<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_complete_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">


    <Button
        android:id="@+id/btn_export_stats"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginEnd="768dp"
        android:background="@android:color/white"
        android:fontFamily="@font/raleway_light"
        android:text="@string/btn_export_stats"
        android:textColor="@color/titles"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/game_summ_cont_btn2"
        app:layout_constraintEnd_toStartOf="@+id/game_summ_cont_btn2"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/game_summ_cont_btn2"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="44dp"
        android:background="@android:color/white"
        android:fontFamily="@font/raleway_light"
        android:text="@string/cont_btn"
        android:textColor="@color/titles"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/btn_help2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/btn_help_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <TextView
        android:id="@+id/game_summ_title"
        android:layout_width="1200dp"
        android:layout_height="90dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/game_summ_title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/game_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/game_info"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_summ_title" />

    <TextView
        android:id="@+id/game_stats"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/white"
        android:scrollbars="vertical"
        android:text="@string/header"
        android:textColor="@color/titles"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_info" />
</androidx.constraintlayout.widget.ConstraintLayout>
